--- a/config.toml
+++ b/config.toml
@@ -53,9 +53,9 @@ taxonomies = [{ name = "tags", feed = true }]
 [extra]
 # Sets theme and browser theme color.
 # See https://developer.mozilla.org/en-US/docs/Web/HTML/Element/meta/name/theme-color
-primary_color = "#ff7800"
+primary_color = "#034efc"
 # Same as primary_color, but with 20% opacity
-primary_color_alpha = "rgba(255, 120, 0, 0.2)"
+primary_color_alpha = "rgba(3, 78, 252, 0.2)"
 # Use emoji as a favicon.
 # Only one emoji is being rendered, everything else is truncated.
 # emoji_favicon = "🦆🪶"
